# indexnow-update

./: .gitignore  Cargo.toml  Makefile  README.adoc  README.md
etc/: config.yaml
src/: config.rs  constants.rs  http.rs  main.rs  payload.rs  scan.rs  sqlite3.rs  usage.rs
