[package]
name = "indexnow-update"
version = "0.1.0-20211130"
authors = ["Andreas Maus <maus@ypbind.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
fern = "0.6.0"
getopts = "0.2.21"
hex = "0.4.3"
log = "0.4.16"
rusqlite = "0.27.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_yaml = "0.8.23"
sha2 = "0.10.2"
walkdir = "2.3.2"

