[package]
name = "indexnow-update"
version = "1.0.0"
authors = ["Andreas Maus <maus@ypbind.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
fern = "0.6.1"
getopts = "0.2.21"
hex = "0.4.3"
log = "0.4.17"
regex = "1.5.6"
reqwest = { version = "0.11.10", features = ["blocking", "json", "native-tls"] }
rusqlite = "0.27.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
serde_yaml = "0.8.24"
simple-error = "0.2.3"
sha2 = "0.10.2"
url = "2.2.2"
walkdir = "2.3.2"
